feat: add main padding

--- a/index.html
+++ b/index.html
@@ -17,10 +17,16 @@
         margin: 0;
         padding: 0;
       }
+
+      main {
+        padding: 20px;
+      }
     </style>
   </head>
   <body>
-    <h1>Hello there!</h1>
-    <p>Testing Vercel static file hosting</p>
+    <main>
+      <h1>Hello there!</h1>
+      <p>Testing Vercel static file hosting</p>
+    </main>
   </body>
 </html>
