--- a/index.html
+++ b/index.html
@@ -19,7 +19,12 @@
       }
 
       main {
-        padding: 20px;
+        padding: 20px 40px;
+      }
+
+      h1 {
+        margin-block-start: 20px;
+        margin-block-end: 20px;
       }
     </style>
   </head>
